--- a/templates/top_manga.html
+++ b/templates/top_manga.html
@@ -62,6 +62,7 @@
             </div>
 </div>
 </div>
+<div><br></div>
  <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item disabled">
@@ -74,6 +75,7 @@
       <a class="page-link" href="#">Next</a>
     </li>
   </ul>
+
 </nav>
 
 </section>
