Adding search ranobe and top ranobe

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@
             Ranobe
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Ranobe Search</a></li>
-            <li><a class="dropdown-item" href="#">Top Ranobe</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('ranobe_search') }}">Ranobe Search</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('top_ranobe') }}">Top Ranobe</a></li>
             <!--<li><hr class="dropdown-divider"></li-->
             <li><a class="dropdown-item" href="#">Reviews</a></li>
           </ul>
