--- a/templates/ranobe_search.html
+++ b/templates/ranobe_search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Anime Search
+Ranobe Search
 {% endblock %}
 {% block content %}
 
@@ -12,7 +12,7 @@ Anime Search
             <div class="col">
       <div class="card" >
           <div class="card-body">
-          <div class="manga-search_header"> <h3><span> Anime Search</span></h3> <div> <div class="input-group rounded">
+          <div class="manga-search_header"> <h3><span> Ranobe Search</span></h3> <div> <div class="input-group rounded">
   <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
   <span class="input-group-text border-0" id="search-addon">
     <i class="fas fa-search"></i>
