--- a/templates/top_ranobe.html
+++ b/templates/top_ranobe.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Top Manga
+    Top Ranobe
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
     <div class = "card">
             <div class = 'card-body'>
   <div class="row">
-    <div> <h3>Top Manga</h3></div>
+    <div> <h3>Top Ranobe</h3></div>
     <table class="table table-bordered">
   <thead>
     <tr>
