Adding search profile, anime, manga and ranobe pages

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -215,7 +215,7 @@ Homepage
 
     <div class="col-sm-4">
         <div><br></div>
-        <dib><br></dib>
+        <div><br></div>
       <div class="card" style="width: 18rem;">
   <img src="https://sun9-80.userapi.com/impg/t55wSDCTHvgcROHzbiMh04cfYBXimTmHbL1-Qg/WByzf8O1z38.jpg?size=654x464&quality=95&sign=b45c5075d0d0ce3dd1e6ad68c99ad1dd&type=album" class="card-img-top" alt="...">
   <div class="card-body">
