--- a/templates/manga_search.html
+++ b/templates/manga_search.html
@@ -14,76 +14,22 @@ Manga Search
       <div class="card" >
           <div class="card-body">
           <div class="manga-search_header"> <h3><span> Manga Search</span></h3> <div> <div class="input-group rounded">
-  <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+              <form action="{{ url_for('search_manga') }}"><input type="search" name="text" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" /></form>
   <span class="input-group-text border-0" id="search-addon">
     <i class="fas fa-search"></i>
   </span>
 </div></div> </div>
         <div class="row row-cols-1 row-cols-md-4 g-2  ">
-  <div class="col align-self-end">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
-  <div class="col justify-content-center">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
+            {% for item in manga %}
   <div class="col">
     <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
+        <a class = "image" href="{{ url_for('manga_page', id=item.id) }}"><img src="{{ item.img }}" width="147" height="206" class="card-img-top" alt="..."></a>
       <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
+          <a class = "link-default" href="{{ url_for('manga_page', id=item.id) }}" ><h5 class="card-title">{{ item.title }}</h5></a>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
-              <div class="col">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
-              <div class="col">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
-              <div class="col">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
-              <div class="col">
-    <div class="card h-100" style="width: 9.5rem;">
-        <a class = "image" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg"><img src="https://cdn.myanimelist.net/s/common/store/cover/5703/75f9f81c17863f3819b7e2ad14d7bbd094b8e128401c2279a6de64c700d70395/l@2x.jpg" width="147" height="206" class="card-img-top" alt="..."></a>
-      <div class="card-body">
-          <a class = "link-default" href="https://www.meme-arsenal.com/memes/d80e757e7702cdf73fd53bc90bce45c3.jpg" ><h5 class="card-title">LD{JF.;sdklfjOVjlSDPFIJxlvjdso</h5></a>
-      </div>
-    </div>
-  </div>
+    {% endfor %}
 </div>
 </div>
 
